# rpi_thermometer

./: CMakeLists.txt
blink/: blink.c  ssd1306.c
src/: CMakeLists.txt  ssd1306.h  ssd1306_conf.h
